# rustbridge

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  build.rs  index.html  intro.html  print.html  wishes.md  workshops.md
beginners/: README.html  tutorial-text.html
examples/: README.md  www.clojurebridge.org.tgz
examples/www.clojurebridge.org/: about.html  donate.html  get-involved.html  index.html
examples/www.clojurebridge.org/assets/: application-841415b623b72ab87d96d15a1ea4c14a.css  application-ed3e984e1741193eb9e1fa4a8efbdfdb.js  jquery.mCustomScrollbar-144fc3cd8e685bafb8e581ce758ba8fe.js
examples/www.railsbridge.org/: about.html  help.html  index.html  learn.html  robots.txt.html
examples/www.railsbridge.org/about/: brand.html  chapters.html  past-events.html  projects.html  sponsors.html  team.html
examples/www.railsbridge.org/assets/: Aleo-Light-webfont-0b6b1af8a3c38bba0545bc9f4085c9f9eaa738e64118c7cc044f460ac1d94c19.eot?  Aleo-Regular-webfont-d61c7318c4c48182e504498212884f029ce9e5ae8f6dda1ff5d138a426e514cd.eot  application-c4328a043456c9fac677fc0a896e383625693c1a6e4dd00093521fba1a798a7a.css  application-c463770b1e5552971059ecba4d6ddb63055c10d51dfcd1f2102480a32ec50922.js
examples/www.railsbridge.org/fonts/bootstrap/: glyphicons-halflings-regular.eot.html  glyphicons-halflings-regular.eot?.html  glyphicons-halflings-regular.svg.html  glyphicons-halflings-regular.ttf.html  glyphicons-halflings-regular.woff.html  glyphicons-halflings-regular.woff2.html
examples/www.railsbridge.org/help/: donate.html  donor-faq.html  host.html  interest-form.html  organize.html  teach.html  teacher-advice.html
examples/www.railsbridge.org/learn/: events.html  faq.html  resources.html
installfest/: README.html  presentation-outline.html  user-guide.html
machine_learning/: readme.html
machine_learning/spam_or_ham/: Cargo.toml
machine_learning/step_1/src/: main.rs
meeting-minutes/: 2016-07-12.txt  2016-07-26.txt  2016-08-02.txt
mondrian-pattern/: CONTRIBUTING.html  README.html  part1.html  part2.html
presentations/intro-to-rust/: README.md  custom.css  globe.html  index.html  index.json
textadventure/: Cargo.toml  textadventure.html
textadventure/src/: board.rs
url_shortener/: README.html
web-scraper/: README.html
web-scraper/doc/: demo.html  wishlist.html
web-scraper/doc/wishlist_files/: AmazonUI-eee8fa06301494ea4b522c77ed2d54e68b5996a1.css  RetailWebsiteOverlayAUIAssets-e1fa1d812d4d36b850d5a98d198a326.js  US-secure-combined-11313707.css  getCartCount.dms  image1.dms
web-scraper/step005/scraper/src/: main.rs
web-scraper/step010/scraper/src/: main.rs
web-scraper/step999-alternate/scraper/src/: main.rs
workshop/: GNOMES.md
workshop/installfest/: presenter-notes.md  user-guide.md
workshop/machine_learning/: readme.md  workshop.md
workshop/machine_learning/spam_or_ham/: Cargo.toml
workshop/machine_learning/spam_or_ham/src/: main.rs
workshop/textadventure/: Cargo.toml  textadventure.md
workshop/textadventure/src/: board.rs  main.rs  players.rs
workshop/url_shortener/: Cargo.toml  README.md
workshop/url_shortener/src/: main.rs  serdes.rs
workshop/url_shortener/src/db/: mod.rs
workshop/url_shortener/src/serialize/: mod.rs
workshop/url_shortener/src/server/: mod.rs
workshops/: book.toml
workshops/beginners/: README.md  tutorial-text.md
workshops/beginners/01_single_color_image/: Cargo.toml
workshops/beginners/01_single_color_image/src/: main.rs
workshops/beginners/02_simple_image/src/: main.rs
workshops/beginners/03_random_image/: Cargo.toml
workshops/beginners/simple_image/: Cargo.toml
workshops/installfest/: user-guide.md
workshops/intro-to-rust/: custom.css  fonts.css  index.html
workshops/machine_learning/: readme.md
workshops/machine_learning/spam_or_ham/src/: main.rs
workshops/machine_learning/step_3/: Cargo.toml
workshops/mondrian-pattern/: CONTRIBUTING.md  README.md  part1.md  part2.md
workshops/mondrian-pattern/codebase/conromond/: Cargo.toml
workshops/mondrian-pattern/codebase/conromond/src/: main.rs
workshops/mondrian-pattern/codebase/mondpaint/: Cargo.toml
workshops/mondrian-pattern/codebase/mondpaint/src/: main.rs
workshops/mondrian-pattern/codebase/mondpaint/src/snapshnots/: main_0004-Randomise-the-split-position.rs  main_0007-One-horiz.-two-vert.-splits-above-and-below.rs
workshops/mondrian-pattern/codebase/portmond/: Cargo.toml
workshops/mondrian-pattern/codebase/portmond/src/: main.rs
workshops/mondrian-pattern/hello-rnd/: Cargo.toml
workshops/mondrian-pattern/images/: build-error_explained.xcf
workshops/src/: SUMMARY.md  intro.md
workshops/src/beginners/: README.md  tutorial-text.md
workshops/src/installfest/: README.d  README.md  presentation-outline.md
workshops/src/machine_learning/: readme.md  readme.md.skt.md
workshops/src/mondrian-pattern/: CONTRIBUTING.md  part1.md  part2.md
workshops/src/textadventure/: README.md  textadventure.md
workshops/src/url_shortener/: README.md
workshops/textadventure/: Cargo.toml  textadventure.md
workshops/textadventure/src/: board.rs  inventory.rs  main.rs  players.rs
workshops/url_shortener/src/: serdes.rs
workshops/web-scraper/: README.md
workshops/web-scraper/doc/: demo.md
(+51 files in other folders)
