[package]
name = "mondpaint"
version = "0.1.0"
authors = ["Martin Br:osamle <m@minusbroe.de>"]

[dependencies]
piston2d-graphics = { version = "0.17", optional = true}
piston_window = { version = "0.52", optional = true }
rand="0.3"


[features]
default = ["piston", "piston_window"]
piston = ["piston2d-graphics"]
